hphp/hack/test/extended_reasons/optional_sub_newtype_if_unsat.php.diff.exp
--- control

+++ test

@@ -1,6 +1,36 @@

+error: Typing[4110] Invalid argument [1]
+-> Expected bool [2]
+-> But got null [3]
+
+hphp/hack/test/extended_reasons/optional_sub_newtype_if_unsat.php:8:7
+    1 | <?hh
+    2 | 
+[2] 3 | newtype MyThing = (bool|int);
+    4 | 
+    5 | function foo(MyThing $_): void {}
+    6 | 
+[3] 7 | function bar(?string $x): void {
+[1] 8 |   foo($x);
+    9 | }
+
 error: Typing[4110] Invalid argument [1]
 -> Expected bool [2]
 -> But got string [3]
+
+hphp/hack/test/extended_reasons/optional_sub_newtype_if_unsat.php:8:7
+    1 | <?hh
+    2 | 
+[2] 3 | newtype MyThing = (bool|int);
+    4 | 
+    5 | function foo(MyThing $_): void {}
+    6 | 
+[3] 7 | function bar(?string $x): void {
+[1] 8 |   foo($x);
+    9 | }
+
+error: Typing[4110] Invalid argument [1]
+-> Expected int [2]
+-> But got null [3]
 
 hphp/hack/test/extended_reasons/optional_sub_newtype_if_unsat.php:8:7
     1 | <?hh
@@ -30,7 +60,7 @@

 
 error: Typing[4110] Invalid argument [1]
 -> Expected (int | bool) [2]
--> But got ?string [3]
+-> But got null [3]
 
 hphp/hack/test/extended_reasons/optional_sub_newtype_if_unsat.php:8:7
     3 | newtype MyThing = (bool|int);
@@ -54,4 +84,4 @@

 [1] 8 |   foo($x);
     9 | }
 
-4 errors found
+6 errors found