hphp/hack/test/extended_reasons/optional_sub_newtype_if_unsat.php
<?hh

newtype MyThing = (bool|int);

function foo(MyThing $_): void {}

function bar(?string $x): void {
  foo($x);
}
